# ActualGameSearch_V2

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  wrangler.toml
.github/: copilot-instructions.md
pipeline/: README.md  __init__.py  pyproject.toml  requirements-dev.txt
pipeline/notebooks/: 01_data_exploration.ipynb  02_ranking_evaluation.ipynb  03_acquire_explore_etl_search.ipynb  04_fix_data_model_and_scaling.ipynb  05_phase2_hybrid_search.ipynb  PHASE2_ARCHITECTURE.md  debug_phase2.py  final_validation.py  migrate_phase1_to_phase2.py  phase1_complete_implementation.py  phase2_hybrid_search.py  test_lexical.py  test_ollama_embeddings.py  test_realistic_queries.py
pipeline/notebooks/archive/: 04_phase1_embeddings_ollama.ipynb
pipeline/scripts/: __init__.py  etl_to_sqlite.py  join_price_minmax_to_apps.py  price_minmax.py  price_probe.py  run_etl.py  verify_models.py
pipeline/src/ags_pipeline/: main.py  models.py
pipeline/src/ags_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pipeline/src/ags_pipeline/embed/: nomic_embedder.py
pipeline/src/ags_pipeline/extract/: steam_client.py
pipeline/src/ags_pipeline/io/: price_minmax_loader.py
pipeline/src/ags_pipeline/load/: d1_loader.py  vectorize_loader.py
pipeline/src/ags_pipeline/models/: __init__.py  steam_models.py
pipeline/tests/: README.md  test_etl_join_minmax.py  test_field_locator.py  test_price_loader.py  test_price_normalization.py  test_steam_models.py
pipeline/tests/fixtures/: sample_expanded_apps.csv  sample_price_minmax.json
(+61 files in other folders)
