[project]
name = "ags-pipeline"
version = "0.1.0"
description = "Offline ETL pipeline for ActualGameSearch"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
	"pandas>=2.0",
	"numpy>=1.25",
	"requests>=2.31",
	"pyarrow>=14.0",
	"feather-format>=0.4.1",
]

[project.optional-dependencies]
dev = [
	"pytest>=7.0",
	"pytest-cov",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
